--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
       # Bump package version
       # Use tag latest
       - name: Bump release version
-        run: npm --no-git-tag-version version  from-git
+        run: npm version ${{  github.ref_name }}
         
       - name: Pop
         run: git pop
