--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,8 @@ jobs:
         
       - name: Commit Files
         run: |
+          git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
+          git config --global user.email "kalmane3101@gmail.com"
           git add "package.json"
           git commit -m "Updated `package.json` with new release version"
           git push
