--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,12 +31,17 @@ jobs:
         run: |
           git config --global user.name "Chinmay-Kalmane"
           git config --global user.email "kalmane3101@gmail.com"
+          git checkout -b release-${{  github.ref_name }}
+          git branch
           git add "package.json"
           git add "package-lock.json"
           git status
           git commit -m "Updated `package.json` with new release version"
           git status
-          git push origin HEAD:<name-of-remote-branch>
+          git checkout main
+          git merge release-${{  github.ref_name }}
+          git log --oneline
+          git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
