--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
           git status
           git commit -m "Updated `package.json` with new release version"
           git status
-          git push
+          git push --set-upstream origin release-${{  github.ref_name }}
 #          git checkout main
 #           git merge release-${{  github.ref_name }}
 #          git log --oneline
