--- a/.github/workflows/git.yml
+++ b/.github/workflows/git.yml
@@ -1,5 +1,11 @@
 name: Git Example
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      tags:
+        description: 'Test scenario tags'
+        required: true
+        type: boolean
 jobs:
   build:
     runs-on: ubuntu-latest
