--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
         
       - name: Commit Files
         run: |
-          echo github.event.release.target_commitish
+          echo "${{ github.event.release.target_commitish }}"
           git config --global user.name "Chinmay-Kalmane"
           git config --global user.email "kalmane3101@gmail.com"
           git checkout -b release-${{  github.ref_name }}
@@ -40,6 +40,10 @@ jobs:
           git commit -m "Updated `package.json` with new release version"
           git status
           git push --set-upstream origin release-${{  github.ref_name }}
+          git fetch
+          git checkout main
+          git merge release-${{  github.ref_name }}
+          git log --oneline
 #          git checkout main
 #           git merge release-${{  github.ref_name }}
 #          git log --oneline
